# bazel-nix-python-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  python39.nix  requirements.in  requirements.txt
app/: BUILD.bazel  test_pandas.py
